src/test/deca/syntax/invalid/sansobjet/lex_floathex_max2_invalid.deca
// TEst maximum debordement 
// erreur IlegalargumentExcetpion ligne 3
0x2.7fffffp127
